--- a/html/marti-blog.css
+++ b/html/marti-blog.css
@@ -136,7 +136,22 @@
     margin-bottom: 0;
 }
 .marti-base {
-    padding-bottom: 3rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    box-shadow: 0px 0px 4px rgba(0,0,0,.2);
+    padding-right: 1rem;
+    padding-left: 1rem;
+    padding-bottom: 0.4rem;
+    background-color: #f2f2f2;
+    border-radius: 5px;
+    border-color: #111;
 }
 
 
+
+
+.imatge {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
