--- a/nadal/magnifier.css
+++ b/nadal/magnifier.css
@@ -76,12 +76,11 @@ div#main{
     display: none
 }
 .marti-base {
-    box-shadow: 0px 0px 5px rgba(0,0,0,.6);
-    padding: 0.4rem;
-    padding-bottom: 1rem;
-    background-color: #468;
-    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,.6);
+    padding: 1rem;
+    background-color: #246;
+    border-radius: 20px;
     border-color: #111;
-    color: azure;
+    color: white;
     text-align: left;
 }
