--- a/holaaina/aina.css
+++ b/holaaina/aina.css
@@ -1,47 +1,16 @@
 
-
-
 /*
  * Masthead for nav
  */
 
 .blog-main {
-  border-radius: 5px;
+  border-radius: 10px;
   margin-top: 1rem;
   margin-bottom: 5rem;
-  -webkit-box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.2);
-          box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.2);
-  background-color: #fefefe;
-}
-
-/* Nav links */
-.nav-link {
-  position: relative;
-  padding: 0rem;
-  color: #cdddeb;
-}
-.nav-link:hover,
-.nav-link:focus {
-  color: #fff;
-  background-color: transparent;
-}
-
-/* Active state gets a caret at the bottom */
-.nav-link.active {
-  color: #fff;
-}
-.nav-link.active:after {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  width: 0;
-  height: 0;
-  margin-left: -.3rem;
-  vertical-align: middle;
-  content: "";
-  border-right: .3rem solid transparent;
-  border-bottom: .3rem solid;
-  border-left: .3rem solid transparent;
+  -webkit-box-shadow: inset 0 0rem 0.6rem rgba(0,0,0,.6);
+          box-shadow: inset 0 0rem 0.6rem rgba(0,0,0,.6);
+  background-color: #456;
+  border: 2px solid #123;
 }
 
 
@@ -50,11 +19,13 @@
  */
 
 .blog-header {
-  margin-top: 5rem;
+  color: #FFF;
+  padding-top: 5rem;
   padding-bottom: 1.25rem;
   margin-bottom: 1rem;
   border-bottom: .05rem solid #eee;
-  
+  background-clip: padding-box;
+  background-color: #456;
 }
 .blog-title {
   margin-bottom: 0;
@@ -139,17 +110,15 @@
 .marti-base {
     margin-top: 1rem;
     margin-bottom: 1rem;
-    box-shadow: 0px 0px 4px rgba(0,0,0,.2);
+    box-shadow: 0px 0px 4px rgba(0,0,0,.3);
     padding-right: 1rem;
     padding-left: 1rem;
     padding-bottom: 0.4rem;
-    background-color: #f2f2f2;
-    border-radius: 5px;
-    border-color: #111;
+    background-color: #234;
+    border-radius: 7px;
+    border-color: #DDD;
+    color: #FFF;
 }
-
-
-
 
 .imatge {
     max-width: 100%;
@@ -157,3 +126,18 @@
     display: block;
 }
 
+
+.negre {
+    background-color: #234
+}
+
+.gris {
+    background-color: #ABC;
+}
+
+.block {
+    display: block;
+    text-align: center;
+    width: 100%;
+    
+}
