--- a/holaaina/aina.css
+++ b/holaaina/aina.css
@@ -4,13 +4,12 @@
  */
 
 .blog-main {
-  border-radius: 10px;
-  margin-top: 1rem;
+  border-radius:10px;
   margin-bottom: 5rem;
   -webkit-box-shadow: inset 0 0rem 0.6rem rgba(0,0,0,.6);
           box-shadow: inset 0 0rem 0.6rem rgba(0,0,0,.6);
   background-color: #456;
-  border: 2px solid #123;
+  border: 1px solid #123;
 }
 
 
@@ -128,7 +127,7 @@
 
 
 .negre {
-    background-color: #234
+    background-color: #234;
 }
 
 .gris {
