--- a/html/fluid-gallery.css
+++ b/html/fluid-gallery.css
@@ -1,6 +1,5 @@
 body {
-    background-color: #434c50;
-    background-image: repeating-linear-gradient(45deg, #434c50, #434c50 30px, #454e52 30px, #454e52 60px);
+    background-color: #eee;
     min-height: 100vh;
     font: normal 16px sans-serif;
     padding: 40px 0;
@@ -16,20 +15,19 @@ body {
     max-width: 1348px;
 }
 .container.gallery-container-2 {
-    background-color: #ffffff;
+    background-color: #eee;
     margin: 0px auto;
     font-family: 'Raleway', sans-serif;
     color: #353a39;
     padding: 5px 10px;
     border-radius: 5px;
     width: 90%;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
     max-width: 1348px;
 }
 
 .gallery-container h1 {
     text-align: center;
-    color: #232726;
+    color: #222;
     margin-top: 30px;
     font-size: 60px;
     font-family: 'Raleway', sans-serif;
@@ -49,9 +47,8 @@ body {
     margin-left: -23%;
     margin-right: -23%;
     background-color: rgb(0, 0, 0);
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
-    padding: 5px;
-    max-height: 768px;
+    padding: 10px;
+    max-height: 778px;
 }
 
 .gallery-container p.header-text {
@@ -60,12 +57,12 @@ body {
     width: 100%;
     font-size: 15px;
     font-family: 'Raleway', sans-serif;
-    color: #ccc;
+    color: #aaa;
 }
 
 
 .tz-gallery {
-    padding: 7px;
+    padding: 14px;
 }
 
 /* Override bootstrap column paddings */
